syntax = "proto3";

package r3;

option go_package = "github.com/johnsiilver/prototools/sample";

enum EnumValues{
    EV_Unknown = 0;
    EV_Ok= 1;
    EV_Not_Ok = 2;
    EV_Eh = 3;
}

message Supported {
	EnumValues ev = 1;
	string vstring = 2;
	int32 vint32 = 3;
	int64 vint64 = 4;
	bool vbool = 5;
}

message Layer0 {
	Layer1 layer1 = 1;
	int32 vint32 = 2;
}

message Layer1 {
	Supported supported = 1;
	string vstring = 2;
}
